src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { fixed 1000; }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1000 × 336, bounds: 1248 × 688, states: []
size: 1000 × 336, bounds: 1248 × 688, states: [Activated]
